# aiida-diff

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.md  azure-pipelines.yml  conftest.py  manage.py  pyproject.toml  setup.json
.ci/azure-templates/: conda-steps.yml
.github/workflows/: ci.yml  publish-on-pypi.yml
aiida_diff/: __init__.py  calculations.py  cli.py  helpers.py  parsers.py
aiida_diff/tests/: __init__.py  test_calculations.py
docs/source/: conf.py  index.rst
docs/source/developer_guide/: index.rst
docs/source/user_guide/: get_started.rst
examples/: example_01.py  submit.py
tests/: test_calculations.py  test_cli.py
